2007-10-21 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.8

2007-10-21 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo.js: Change logic to only display one list at a time.
	* flexo_archives_widget.php: Use sprintf in flexo_year_start.
		Bump version prior to tag.
	* readme.txt: Add more tags to widget, hopefully making it
		easier to find. Fix a typo in the FAQs. Add a note
		about how to test if your theme has a problem.

2007-10-20 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.7

2007-10-20 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo.js: Bugfix for themes that don't set the ID of the 
		widget's root element.  We previously just refused
		to work, but now we find the widget's root using the
		flexo links.
	* flexo_archives_widget.php: Bump version prior to tag.
	* readme.txt: Update version history and stable version.

2007-09-21 Heath Harrelson <heath.harrelson@gmail.com>
	* readme.txt: Update highest compatible version of WP.

2007-09-21 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo.js: Check for themes that don't put the widget's ID
		in the element containing the widget. This keeps us from
		hiding the archive lists and making them unreachable on
		broken themes.
	* readme.txt: Add a FAQ about list colors. Not my fault. Really.
		Update version history and stable version.

2007-08-28 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Change flexo_year_start() function
		to provide the yearly archive links with an id and bump
		version. More work to make it easier to keep track of 
		which lists are expanded using a cookie.

2007-08-28 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo.js: Rearrange logic to use the flexo link as the element
		that list expansion / contraction operates on. This 
		will make it easier to keep track of which lists are ex-
		panded using a cookie. Rename toggle() to setDisplay().
		Add isFlexoLink(), isListElement, setStateForListWithLink().
